Use Utterances as the comment tool

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,14 @@
     </div>
   </article>
 
-  {{ template "_internal/disqus.html" . }}
+  <script src="https://utteranc.es/client.js"
+          repo="{{ .Site.Params.comment.repo }}"
+          issue-term="pathname"
+          label="comment"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
 
 </main>
 
